--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="caça-palavras-container">
-        <h1>Caça-Palavras</h1>
+    <div class="main-container">
+        <div class="titulo-container">
+            <h1>Caça-Palavras</h1>
+            <a href="memoria.html">
+                <button>Jogo da Memória</button>
+            </a>
+        </div>
         <p>Encontre as palavras abaixo:</p>
         <ul class="palavras-lista" id="palavrasLista">
             <!-- Lista de palavras -->
@@ -16,6 +21,6 @@
         <div class="tabuleiro" id="tabuleiro"></div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="caca-palavras.js"></script>
 </body>
 </html>
